# rust-fetch-repos

./: Cargo.toml  repos.json  test.txt
src/: main.rs
