[package]
name = "rust-fetch-repos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11" , features = ["blocking", "json"]} # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1", features = ["full"] } # for our async runtime
tokio-sync = "0.1"

